css z-index correction --editor sidebar --popover

--- a/apps/builder/src/app/views/editor/editor-sidebar/editor-sidebar.component.css
+++ b/apps/builder/src/app/views/editor/editor-sidebar/editor-sidebar.component.css
@@ -4,7 +4,7 @@
   position: absolute;
   left: 0px;
   height: 100%;
-  z-index: 20;
+  z-index: 10;
   padding-right: 0;
   transition: transform 350ms cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
 }
